welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:3: error: not found: value c
	setCouleurBrosse(c);
                         ^FlowerPot:15: error: not found: value RED
faireFle(RED)
         ^